@@ -29,6 +29,11 @@ else
         AC_MSG_RESULT(no)
 fi
 
+GETTEXT_PACKAGE=libgconf-bridge
+AC_SUBST(GETTEXT_PACKAGE)
+AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, ["$GETTEXT_PACKAGE"], 
+  [Define the gettext package to be used])
+  
 ALL_LINGUAS=""
 AM_GLIB_GNU_GETTEXT
 
