@@ -1,1 +1,1 @@
-../libgconf-bridge/gconf-bridge.c
+libgconf-bridge/gconf-bridge.c
